update remove empty remote/ local repo

--- a/server/server.ipynb
+++ b/server/server.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,21 +42,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Cloning into 'june-federated-server'...\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "clone to  /home/jovyan/git/FL_June/server\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "fatal: destination path 'june-federated-server' already exists and is not an empty directory.\n"
      ]
     }
    ],
@@ -72,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-01-11 17:39:09.877368: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n"
+      "2022-01-11 18:06:49.958189: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n"
      ]
     }
    ],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
      "text": [
       "Already up to date.\n",
       "\n",
-      "['  origin/BxipCjg_WfS0amO30vC6mQ', '  origin/MKkWS7qXBbnugNAEXN8PEg', '  origin/Ntyfcj14jPRiW4iWiNa2PA', '  origin/O6xI1TK_l7N5GWFtS5hmAA', '  origin/VA6GWv7MfvF1OnnLj0Ra3w', '  origin/ZmUvKOfUgOhilDwuPALTWA']\n"
+      "['  origin/BxipCjg_WfS0amO30vC6mQ', '  origin/MKkWS7qXBbnugNAEXN8PEg', '  origin/Ntyfcj14jPRiW4iWiNa2PA', '  origin/VA6GWv7MfvF1OnnLj0Ra3w', '  origin/ZmUvKOfUgOhilDwuPALTWA']\n"
      ]
     }
    ],
@@ -304,7 +304,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* \u001b[32mmain\u001b[m\n",
+      "  \u001b[31mremotes/origin/BxipCjg_WfS0amO30vC6mQ\u001b[m\n",
+      "  \u001b[31mremotes/origin/HEAD\u001b[m -> origin/main\n",
+      "  \u001b[31mremotes/origin/MKkWS7qXBbnugNAEXN8PEg\u001b[m\n",
+      "  \u001b[31mremotes/origin/Ntyfcj14jPRiW4iWiNa2PA\u001b[m\n",
+      "  \u001b[31mremotes/origin/VA6GWv7MfvF1OnnLj0Ra3w\u001b[m\n",
+      "  \u001b[31mremotes/origin/ZmUvKOfUgOhilDwuPALTWA\u001b[m\n",
+      "  \u001b[31mremotes/origin/main\u001b[m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git branch -a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_lis = [i.split('/')[-1] for i in all_client_branch]\n",
+    "for i in all_lis:\n",
+    "    if not i in [_.split('.')[0] for _ in lis]:\n",
+    "        print(i)\n",
+    "        remote_name = 'origin'\n",
+    "        branch_name = i\n",
+    "        os.popen(f'git branch -d {branch_name}')\n",
+    "        os.popen(f'git push {remote_name} --delete {branch_name}').read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -317,24 +357,9 @@
       "\n",
       "origin/Ntyfcj14jPRiW4iWiNa2PA Ntyfcj14jPRiW4iWiNa2PA.pbz2\n",
       "\n",
-      "origin/O6xI1TK_l7N5GWFtS5hmAA O6xI1TK_l7N5GWFtS5hmAA.pbz2\n",
-      "\n",
       "origin/VA6GWv7MfvF1OnnLj0Ra3w VA6GWv7MfvF1OnnLj0Ra3w.pbz2\n",
       "\n",
-      "origin/ZmUvKOfUgOhilDwuPALTWA ZmUvKOfUgOhilDwuPALTWA.pbz2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "error: pathspec 'O6xI1TK_l7N5GWFtS5hmAA.pbz2' did not match any file(s) known to git.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "origin/ZmUvKOfUgOhilDwuPALTWA ZmUvKOfUgOhilDwuPALTWA.pbz2\n",
       "\n"
      ]
     }
@@ -364,11 +389,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-01-11 18:06:52.784183: I tensorflow/compiler/jit/xla_cpu_device.cc:41] Not creating XLA devices, tf_xla_enable_xla_devices not set\n",
+      "2022-01-11 18:06:52.785036: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcuda.so.1\n",
+      "2022-01-11 18:06:52.917087: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1720] Found device 0 with properties: \n",
+      "pciBusID: 0000:06:00.0 name: NVIDIA GeForce GTX 1080 Ti computeCapability: 6.1\n",
+      "coreClock: 1.582GHz coreCount: 28 deviceMemorySize: 10.92GiB deviceMemoryBandwidth: 451.17GiB/s\n",
+      "2022-01-11 18:06:52.919864: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1720] Found device 1 with properties: \n",
+      "pciBusID: 0000:07:00.0 name: NVIDIA GeForce GTX 1080 Ti computeCapability: 6.1\n",
+      "coreClock: 1.582GHz coreCount: 28 deviceMemorySize: 10.92GiB deviceMemoryBandwidth: 451.17GiB/s\n",
+      "2022-01-11 18:06:52.922611: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1720] Found device 2 with properties: \n",
+      "pciBusID: 0000:0f:00.0 name: NVIDIA GeForce GTX 1080 Ti computeCapability: 6.1\n",
+      "coreClock: 1.582GHz coreCount: 28 deviceMemorySize: 10.92GiB deviceMemoryBandwidth: 451.17GiB/s\n",
+      "2022-01-11 18:06:52.922633: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n",
+      "2022-01-11 18:06:52.925730: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublas.so.11\n",
+      "2022-01-11 18:06:52.925775: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublasLt.so.11\n",
+      "2022-01-11 18:06:52.927237: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcufft.so.10\n",
+      "2022-01-11 18:06:52.927521: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcurand.so.10\n",
+      "2022-01-11 18:06:52.930869: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcusolver.so.10\n",
+      "2022-01-11 18:06:52.931641: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcusparse.so.11\n",
+      "2022-01-11 18:06:52.931803: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudnn.so.8\n",
+      "2022-01-11 18:06:52.947849: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1862] Adding visible gpu devices: 0, 1, 2\n",
+      "2022-01-11 18:06:52.948368: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2022-01-11 18:06:52.948941: I tensorflow/compiler/jit/xla_gpu_device.cc:99] Not creating XLA devices, tf_xla_enable_xla_devices not set\n",
+      "2022-01-11 18:06:53.477655: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1720] Found device 0 with properties: \n",
+      "pciBusID: 0000:06:00.0 name: NVIDIA GeForce GTX 1080 Ti computeCapability: 6.1\n",
+      "coreClock: 1.582GHz coreCount: 28 deviceMemorySize: 10.92GiB deviceMemoryBandwidth: 451.17GiB/s\n",
+      "2022-01-11 18:06:53.480034: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1720] Found device 1 with properties: \n",
+      "pciBusID: 0000:07:00.0 name: NVIDIA GeForce GTX 1080 Ti computeCapability: 6.1\n",
+      "coreClock: 1.582GHz coreCount: 28 deviceMemorySize: 10.92GiB deviceMemoryBandwidth: 451.17GiB/s\n",
+      "2022-01-11 18:06:53.482397: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1720] Found device 2 with properties: \n",
+      "pciBusID: 0000:0f:00.0 name: NVIDIA GeForce GTX 1080 Ti computeCapability: 6.1\n",
+      "coreClock: 1.582GHz coreCount: 28 deviceMemorySize: 10.92GiB deviceMemoryBandwidth: 451.17GiB/s\n",
+      "2022-01-11 18:06:53.482432: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n",
+      "2022-01-11 18:06:53.482474: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublas.so.11\n",
+      "2022-01-11 18:06:53.482490: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublasLt.so.11\n",
+      "2022-01-11 18:06:53.482505: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcufft.so.10\n",
+      "2022-01-11 18:06:53.482523: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcurand.so.10\n",
+      "2022-01-11 18:06:53.482539: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcusolver.so.10\n",
+      "2022-01-11 18:06:53.482554: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcusparse.so.11\n",
+      "2022-01-11 18:06:53.482570: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudnn.so.8\n",
+      "2022-01-11 18:06:53.497893: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1862] Adding visible gpu devices: 0, 1, 2\n",
+      "2022-01-11 18:06:53.497935: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n",
+      "2022-01-11 18:06:54.935427: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1261] Device interconnect StreamExecutor with strength 1 edge matrix:\n",
+      "2022-01-11 18:06:54.935459: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1267]      0 1 2 \n",
+      "2022-01-11 18:06:54.935466: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1280] 0:   N Y Y \n",
+      "2022-01-11 18:06:54.935469: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1280] 1:   Y N Y \n",
+      "2022-01-11 18:06:54.935473: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1280] 2:   Y Y N \n",
+      "2022-01-11 18:06:54.947684: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1406] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 10271 MB memory) -> physical GPU (device: 0, name: NVIDIA GeForce GTX 1080 Ti, pci bus id: 0000:06:00.0, compute capability: 6.1)\n",
+      "2022-01-11 18:06:54.952669: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1406] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:1 with 10271 MB memory) -> physical GPU (device: 1, name: NVIDIA GeForce GTX 1080 Ti, pci bus id: 0000:07:00.0, compute capability: 6.1)\n",
+      "2022-01-11 18:06:54.957570: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1406] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:2 with 10271 MB memory) -> physical GPU (device: 2, name: NVIDIA GeForce GTX 1080 Ti, pci bus id: 0000:0f:00.0, compute capability: 6.1)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -384,37 +465,6 @@
     "lis = [i for i in os.listdir() if i.__contains__('pbz2')]\n",
     "lis.remove('global_model.pbz2')\n",
     "print(lis)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "O6xI1TK_l7N5GWFtS5hmAA\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "error: unable to delete 'O6xI1TK_l7N5GWFtS5hmAA': remote ref does not exist\n",
-      "error: failed to push some refs to 'https://aiafederated0121:federated0121@gitlab.com/aia-federated-0121/june-federated-server.git'\n"
-     ]
-    }
-   ],
-   "source": [
-    "all_lis = [i.split('/')[-1] for i in all_client_branch]\n",
-    "for i in all_lis:\n",
-    "    if not i in [_.split('.')[0] for _ in lis]:\n",
-    "        print(i)\n",
-    "        remote_name = 'origin'\n",
-    "        branch_name = i\n",
-    "        os.popen(f'git push {remote_name} --delete {branch_name}').read()"
    ]
   },
   {
