--- a/example/FedAvg_PerturbedGD.ipynb
+++ b/example/FedAvg_PerturbedGD.ipynb
@@ -434,40 +434,23 @@
     "import random\n",
     "from tqdm.auto import tqdm, trange\n",
     "\n",
-    "# def round_train(client_list, hyper_para, rounds):\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "\n",
-    "#     print(choice)\n",
     "\n",
     "rounds = 50\n",
-    "# start training\n",
     "\n",
+    "# start training\n",
     "all_samples = 0\n",
     "for i in client_list:\n",
     "    k = client_list[i]\n",
     "    all_samples += np.sum([len(y) for (x,y) in k.dataset])\n",
     "print('all client sample sum', all_samples)\n",
     "for rd in trange(rounds):\n",
-    "#     print('>>>start of round')\n",
     "\n",
     "    # select client set S_t for t-th round from all clients set S. \n",
     "    size = int(np.ceil(hyper_para['C']*len(client_list)))\n",
-    "    \n",
-    "#     size = 4\n",
     "    choice = random.sample(list(client_list.keys()), size)\n",
-    "#     print('participate client ',choice)\n",
     "\n",
     "    models = []\n",
     "    \n",
-    "#     #     ================================================================= Check\n",
-    "#     print('\\nWhether each client as same as Gmodel before round start?')\n",
-    "#     for i in client_list:\n",
-    "#         k = client_list[i]\n",
-    "#         string = i+' is as same as Gmodel?'\n",
-    "#         print(model_equal_validation(string, k.model, Gmodel))\n",
-    "# #     ================================================================= Check\n",
     "    sum_samples = 0\n",
     "    for i in choice:\n",
     "        k = client_list[i]\n",
@@ -476,31 +459,24 @@
     "    \n",
     "    for key in choice: \n",
     "        k = client_list[key]\n",
-    "#         print(key)\n",
     "\n",
-    "#         model = k.model\n",
-    "#         optimizer = k.optimizer\n",
     "        dataset = k.dataset\n",
     "        k.model.fit(dataset, epochs=3, verbose=0)\n",
     "        \n",
     "        \n",
     "\n",
     "        a = np.sum([len(y) for (x,y) in k.dataset])/sum_samples # compute Average weighting weight for this client\n",
-    "#         a = 1 # ? \n",
     "        b = k.model.trainable_variables # get weight \n",
     "        c = [l*a for l in b] # multiply weighting in every layer \n",
     "        models.append(c)\n",
     "\n",
     "    # model aggregate\n",
-    "\n",
     "    new_weights = list()\n",
     "    if len(models) == 1:\n",
     "        print('only single participant')\n",
     "        new_weights = models[0]\n",
     "    else:\n",
     "        for i in zip(*models):\n",
-    "#             print(tf.shape(i))\n",
-    "#             new_weights.append(tf.reduce_mean(i, axis=0))\n",
     "            new_weights.append(tf.reduce_sum(i, axis=0))\n",
     "\n",
     "    Gmodel.set_weights(new_weights)\n",
@@ -544,7 +520,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -558,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
