--- a/example/FedAvg_PerturbedSGD(FedProx).ipynb
+++ b/example/FedAvg_PerturbedSGD(FedProx).ipynb
@@ -102,7 +102,6 @@
     "    \n",
     "\n",
     "    def _create_slots(self, var_list):\n",
-    "\n",
     "        for var in var_list:\n",
     "            self.add_slot(var, \"vt\")\n",
     "        for var in var_list:\n",
@@ -114,9 +113,10 @@
     "        mu_t = tf.cast(self._mu_t, var.dtype.base_dtype)\n",
     "        \n",
     "        vp = self.get_slot(var, \"vt\") # vt = this client's this layer traiable variable \n",
-    "        \n",
-    "        var_update = var.assign_sub(lr_t*(grad + mu_t*(var-vp)))\n",
-    "        var.assign(var_update)\n",
+    "        # var = var - x # assign_sub -= ?\n",
+    "        var.assign_sub(lr_t*(grad + mu_t*(var-vp)))\n",
+    "#         var_update = var.assign_sub(lr_t*(grad + mu_t*(var-vp)))\n",
+    "#         var.assign(var_update)\n",
     "\n",
     "    def get_config(self):\n",
     "        config = super().get_config()\n",
@@ -508,6 +508,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_916/2897171160.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mint64\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mres_b\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0massign_sub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mres_b\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
+     ]
+    }
+   ],
    "source": []
   },
   {
