--- a/example/FedAvg_SGD.ipynb
+++ b/example/FedAvg_SGD.ipynb
@@ -133,9 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -239,8 +237,7 @@
     "    if display:\n",
     "        print(string,'\\t>>>', all(true_lis))\n",
     "#     string_ = string+'  >>>'+ str(all(true_lis))\n",
-    "    return all(true_lis)\n",
-    "    "
+    "    return all(true_lis)"
    ]
   },
   {
@@ -543,7 +540,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -557,7 +554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
